--- a/brainy-configuration/package.json
+++ b/brainy-configuration/package.json
@@ -38,6 +38,7 @@
     "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "~8.2.11",
     "codelyzer": "^5.2.1",
+    "prettier": "^2.0.5",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
